--- a/views/classeditview.ejs
+++ b/views/classeditview.ejs
@@ -6,7 +6,7 @@ Number:<br>
 <input type="text" name="fnumber" value="name">
 <br>
 Strength<br>
-<input type="text" name="age"><br>
+<input type="text" name="strength"><br>
 <input type="hidden" name="id" value="<%=edited.id%>">
 Submit:<br>
 <input type="Submit"> 
