Renamed Association Variable, changed model name classes to class, kept "id" at top in the model

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,9 +34,27 @@
   </head>
 
   <body>
+      
+      <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+              <a class="navbar-brand" href="/"> Welcome</a>
+            </div>
+          </div>
     <%- body %>
 
-
+     <div class="container">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <footer class="footer pull-right">
+        <div>
+          <a href="https://www.facebook.com/saicharan.mamidi.1211/">BalaSai Charan</a>
+          <div> Sails Project by Bala </div>
+        </div>
+      </footer>
+    </div>
 
     <!--
         Client-side Templates
