made views into respective folders

--- a/views/class/classeditview.ejs
+++ b/views/class/classeditview.ejs
@@ -9,7 +9,7 @@ Strength<br>
 <input type="text" name="strength"><br>
 <input type="hidden" name="id" value="<%=edited.id%>">
 Submit:<br>
-<input type="Submit"> 
+<input type="Submit" name="submit" value="Edit"> 
 </h4>
 </form>
 
