--- a/views/student/editview.ejs
+++ b/views/student/editview.ejs
@@ -9,7 +9,7 @@ Age:<br>
 <input type="text" name="age"><br>
 <input type="hidden" name="id" value="<%=edited.id%>">
 Submit:<br>
-<input type="Submit"> 
+<input type="Submit" name="submit" value="Edit"> 
 </h4>
 </form>
 
