Changed Route Conventions, issue with put

--- a/views/class/classindividualview.ejs
+++ b/views/class/classindividualview.ejs
@@ -3,5 +3,5 @@
 <%= JSON.stringify(recorded) %>
 </p>
 
-<a href="/class/edit/<%= recorded['id'] %>" >Update </a>
+<a href="/class/<%= recorded['id'] %>" >Update </a>
 
