--- a/views/class/classlistview.ejs
+++ b/views/class/classlistview.ejs
@@ -14,7 +14,7 @@
 	<tr>
 
 		<td>
-		<a href="/class/view?id=<%= recorded[i].id %>"><%= recorded[i].name %>
+		<a href="/class/<%= recorded[i].id %>"><%= recorded[i].name %>
 		</td>
 		<td>
 		<%= recorded[i].strength %>
