--- a/views/student/individualview.ejs
+++ b/views/student/individualview.ejs
@@ -3,5 +3,5 @@
 <%= JSON.stringify(recorded) %>
 </p>
 
-<a href="/student/edit/<%= recorded['id'] %>" >Update </a>
+<a href="/student/<%= recorded['id'] %>" >Update </a>
 
