--- a/views/student/listView.ejs
+++ b/views/student/listView.ejs
@@ -14,7 +14,7 @@
 	<tr>
 
 		<td>
-		<a href="/student/view?id=<%= recorded[i].id %>"><%= recorded[i].name %>
+		<a href="/student/<%= recorded[i].id %>"><%= recorded[i].name %>
 		</td>
 		<td>
 		<%= recorded[i].age %>
