--- a/views/student/myview.ejs
+++ b/views/student/myview.ejs
@@ -1,6 +1,6 @@
 <h1> Student SignUp Form </h1>
 
-<form method=POST action="/student/insert" class="form-inline" role="form">
+<form method=POST action="/student" class="form-inline" role="form">
 
 <div class="form-group">
 	<h2 class="form-signin-heading">Create account</h2>
