--- a/views/class/classlistview.ejs
+++ b/views/class/classlistview.ejs
@@ -1,13 +1,12 @@
 <h1><%= name %></h1>
-<p>
-<%= JSON.stringify(recorded) %>
-</p>
 
+<div class="col-sm-4">
 <table border=1>
 
 <tr>
-<td> Number </td>
+<td> ClassName </td>
 <td> Strength </td>
+<td> Edit option </td>
 </tr>
 
 <%  for(var i=0;i<recorded.length;i++){%>
@@ -19,6 +18,10 @@
 		<td>
 		<%= recorded[i].strength %>
 		</td>
+		<td>
+		<a href="/class/<%= recorded[i].id %>/edit">Edit 
+		</td>
 <%}	%>
 
 </table>
+</div>
