--- a/views/class/classview.ejs
+++ b/views/class/classview.ejs
@@ -1,17 +1,25 @@
 
+
 <form method=POST action="/class">
 
+
+<div class="container">
+  <form role="form">
+<h3> Class Form </h3>
 <h4>
-Number:<br>
-<input type="text" name="number">
+ClassName:<br>
+<input type="text" name="classname">
 <br>
 
-Strength<br>
+Strength:<br>
 <input type="text" name="strength">
 <br>
 
 Submit:<br>
-<input type="Submit"> 
+<input type="Submit" name="submit" value="Create"> 
 <br>
-
+<br>
+<a href="/class" class="btn btn-lg btn-success">ViewAll</a>
 </h4>
+</form>
+</div>
