--- a/views/student/myview.ejs
+++ b/views/student/myview.ejs
@@ -1,32 +1,42 @@
-<h1> Student SignUp Form </h1>
+
 
 <form method=POST action="/student" class="form-inline" role="form">
 
+<div class="container">
+  <form role="form">
+<h3> Student SignUp Form </h3>
 <div class="form-group">
-	<h2 class="form-signin-heading">Create account</h2>
+	<h4 class="form-signin-heading">Create account</h4>
+
 </div>
+<br>
+
 
 <div class="form-group">
-Name:    
+Name: <br>   
 <input type="text" class="form-control" placeholder="your name" name="firstname">
 <br>
 </div>
+<br>
 
 <div class="form-group">
-Age:
+Age: <br>
 <input type="text" class="form-control" placeholder="Age" name="age">
 <br>
 </div>
+<br>
 
 <div class="form-group">
-Number:
-<input type="text" class="form-control" placeholder="Number" name="Id">
+Number: <br>
+<input type="text" class="form-control" placeholder="Number" name="classname">
 <br>
 </div>
-
-
+<br>
+<br>
 <input type="submit" name="submit" value="Create Account">
-
+<br>
+<br>
+<a href="/student" class="btn btn-lg btn-success">ViewAll</a>
 </form>
-
+</div>
 
