--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,12 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
+</head>
+<body>
 <div class="container">
 <div class="jumbotron">
 <h1> Welcome.....!!! </h1>
 
-<h2> This is an sample sails project regarding Students and their Classes </h2>
+<p> This is an sample sails project regarding Students and their Classes </p>
 
 
 
 <a href="/student/" class="btn btn-lg btn-success">Visit now for Student</a>
 <a href="/class/" class="btn btn-lg btn-success">Visit now for Class</a>
+ 
 </div>
 </div>
