--- a/views/class/classindividualview.ejs
+++ b/views/class/classindividualview.ejs
@@ -1,7 +1,11 @@
+<div class="col-sm-4">
 <h1><%= name %></h1>
 <p>
 <%= JSON.stringify(recorded) %>
 </p>
 
-<a href="/class/<%= recorded['id'] %>" >Update </a>
-
+<a href="/class/<%= recorded['id'] %>/edit" class="btn btn-lg btn-success" >Update </a>
+<br>
+<br>
+<a href="/association/<%= recorded['id'] %>" class="btn btn-lg btn-success">Association</a>
+</div>
