--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>New Sails App</title>
+    <!-- <title>New Sails App</title> -->
 
     <!-- Viewport mobile tag for sensible mobile support -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 
+
+    <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     
     <!--  
         Stylesheets and Preprocessors
@@ -29,12 +36,14 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <!-- <link rel="stylesheet" href="/styles/importer.css"> -->
     <!--STYLES END-->
   </head>
 
   <body>
-      
+   <br>
+   <br>
+   <br>   
       <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
               <a class="navbar-brand" href="/"> Welcome</a>
@@ -48,7 +57,7 @@
       <br>
       <br>
       <br>
-      <footer class="footer pull-right">
+      <footer class="footer">
         <div>
           <a href="https://www.facebook.com/saicharan.mamidi.1211/">BalaSai Charan</a>
           <div> Sails Project by Bala </div>
