--- a/views/associate.ejs
+++ b/views/associate.ejs
@@ -4,7 +4,8 @@
 <h4>
 
 ID: <br>
-<input type="text" name="id" value="<%=recorded.id%>">
+<input type="text" name="id" value="<%=recorded.id%>"
+<br>
 <br>
 Name: <br>
 <input type="text" name="name" value="<%=recorded.name%>">
@@ -13,14 +14,14 @@ Age: <br>
 <input type="text" name="age" value="<%=recorded.age%>">
 <br>
 ClassName: <br>
-<input type="text" name="classname" value="<%=recorded.classname%>">
-<br>
+<!-- <input type="text" name="classname" value="<%=recorded.classname%>">
+<br> -->
 
 <select name="dropdown">
-   <%for(var i=0;i<recorded.length;i++) {%>
- <option value="<%=recorded[i].classname %>"><%=recorded[i].classname %></option>
+   <%for(var i=0;i<recorded1.length;i++) {%>
+ <option value="<%=recorded1[i].name %>"><%=recorded1[i].name %></option>
 <%}%>
-</select> <br><br> 
+</select> <br> 
 
 <br>
 <input type="Submit" name="submit" value="Associate"> 
