--- a/views/student/listView.ejs
+++ b/views/student/listView.ejs
@@ -1,7 +1,12 @@
+<div class="container">
+<div class="jumbotron">
+<h2><%= name %></h2>
+</div>
+</div>
 
-<h1><%= name %></h1>
-
-<div class="col-sm-8">
+<!-- <div class="col-sm-8"> -->
+<div class="container">
+<div class="jumbotron">
 <table border=1>
 
 <tr>
@@ -25,4 +30,6 @@
 <%}	%>
 
 </table>
+</div>
+</div>
 </div>
