verified by Adith

--- a/views/student/editview.ejs
+++ b/views/student/editview.ejs
@@ -10,6 +10,9 @@ Name:<br>
 Age:<br>
 <input type="text" name="age" value="<%=edited.age%>">
 <br>
+Number:<br>
+<input type="text" name="classname" value="<%=edited.classname%>">
+<br>
 
 <input type="hidden" name="id" value="<%=edited.id%>">
 Submit:<br>
