--- a/views/associate.ejs
+++ b/views/associate.ejs
@@ -1,11 +1,11 @@
-<form method=POST action="/class/update">
+<form method=POST action="/student/update">
 
 <div class="col-sm-6">
 <h4>
 
-ID: <br>
+<!-- ID: <br>
 <input type="text" name="id" value="<%=recorded.id%>"
-<br>
+<br> -->
 <br>
 Name: <br>
 <input type="text" name="name" value="<%=recorded.name%>">
@@ -23,6 +23,7 @@ ClassName: <br>
 <%}%>
 </select> <br> 
 
+<input type="hidden" name="id" value="<%=recorded.id%>">
 <br>
 <input type="Submit" name="submit" value="Associate"> 
 </h4>
