--- a/views/class/classindividualview.ejs
+++ b/views/class/classindividualview.ejs
@@ -7,5 +7,5 @@
 <a href="/class/<%= recorded['id'] %>/edit" class="btn btn-lg btn-success" >Update </a>
 <br>
 <br>
-<a href="/association/<%= recorded['id'] %>" class="btn btn-lg btn-success">Association</a>
+<!-- <a href="/association/<%= recorded['id'] %>" class="btn btn-lg btn-success">Association</a> -->
 </div>
